<resources>


    <string name="app_name">BiakaDiet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip …</string>
    <string name="next">Next</string>
    <string name="decision_on_what_you_eat">We help you make the most informed decision about your what you eat!</string>
    <string name="welcome_to_biakadiet">Welcome to BIAKADIET</string>
    <string name="already_have_an_account_sign_in">Already have an Account? SIGN IN</string>
    <string name="sign_up_with_email">SIGN UP WITH EMAIL</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_fragment_background">Sign in Fragment Background</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="retype_password">Retype Password</string>
    <string name="agree_to_terms_and_policy">I agree to the terms and policy</string>
    <string name="or_sign_in_with">------ OR SIGN IN WITH ------</string>
    <string name="or_sign_up_with">------ OR SIGN UP WITH ------</string>
    <string name="forgot_your_password">Forgot password? </string>
    <string name="lorem_ipsium">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature</string>


    <string-array name="diet_goals">
        <item>Loose 500g in a Week (Normal)</item>
        <item>Loose 1kg in a Week (Standard)</item>
        <item>Loose 2kg in a Week (High)</item>
        <item>Loose 4kg in a Week (Extreme)</item>
        <item>Gain 1kg in a Week (Normal)</item>
        <item>Gain 2 kg in a Week (Average)</item>
    </string-array>


</resources>