<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.SignInFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:contentDescription="@string/sign_in_fragment_background"
        android:scaleType="fitCenter"
        android:src="@drawable/image_1"
        android:visibility="visible" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fr_sign_in_tile_tv"
                style="@style/HeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="40dp"
                android:text="@string/sign_up"
                android:textColor="@color/color_primary"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fr_sign_in_email_til"
                style="@style/CustomTextInputFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fr_sign_in_email_et"
                    style="@style/CustomTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/email_address"
                    android:drawableStart="@drawable/email_icon"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fr_sign_in_password_til"
                style="@style/CustomTextInputFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fr_sign_in_password_et"
                    style="@style/CustomTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/password"
                    android:backgroundTint="@android:color/transparent"
                    android:drawableStart="@drawable/password"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fr_sign_in_re_enter_password_til"
                style="@style/CustomTextInputFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fr_sign_in_re_enter_password_et"
                    style="@style/CustomTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/retype_password"
                    android:drawableStart="@drawable/password"
                    android:hint="@string/retype_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/fr_sign_in_sign_in_button"
                style="@style/DefaultButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@string/sign_in"
                app:cornerRadius="30dp" />

            <TextView
                android:id="@+id/fr_sign_in_terms_and_privacy_tv"
                style="@style/DefaultText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i_agree_with_the_terms_and_policy"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/fr_auth_landing_or_tv"
                style="@style/TitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="------ OR SIGN UP WITH ------"
                android:textAlignment="center"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:padding="@dimen/default_margin">

                <ImageView
                    android:id="@+id/fr_sign_in_facebook_icon"
                    style="@style/RoundIconBackground"
                    android:layout_margin="3dp"
                    android:src="@drawable/facebook"
                    app:layout_constraintBottom_toBottomOf="@+id/fr_sign_in_google_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.24"
                    app:layout_constraintStart_toEndOf="@+id/fr_sign_in_google_icon"
                    app:layout_constraintTop_toTopOf="@+id/fr_sign_in_google_icon" />

                <ImageView
                    android:id="@+id/fr_sign_in_google_icon"
                    style="@style/RoundIconBackground"
                    android:src="@drawable/google"
                    android:layout_margin="3dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.35"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>